// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputCheckboxes > displays error message > expected html 1`] = `
<span
  class="inline-block max-w-prose border-l-2 border-red-600 bg-red-50 px-3 py-1"
  data-testid="input-error-test-id"
  id="input-checkboxes-test-error"
  role="alert"
>
  Test Error Message
</span>
`;

exports[`InputCheckboxes > displays helpMessagePrimary > expected html 1`] = `
<span
  class="block max-w-prose text-gray-500 mb-2"
  data-testid="input-field-help-primary"
  id="input-checkboxes-test-help-primary"
>
  Primary help message
</span>
`;

exports[`InputCheckboxes > displays helpMessageSecondary > expected html 1`] = `
<span
  class="block max-w-prose text-gray-500 mt-2"
  data-testid="input-field-help-secondary"
  id="input-checkboxes-test-help-secondary"
>
  Secondary help message
</span>
`;

exports[`InputCheckboxes > renders component with legend and options > expected html 1`] = `
<span>
  Test Legend
</span>
`;

exports[`InputCheckboxes > renders component with legend and options > expected html 2`] = `
<label
  class="block pl-3 leading-6"
  for="input-checkbox-test-option-0"
  id="input-checkbox-test-option-0-label"
>
  Option 1
</label>
`;

exports[`InputCheckboxes > renders component with legend and options > expected html 3`] = `
<label
  class="block pl-3 leading-6"
  for="input-checkbox-test-option-1"
  id="input-checkbox-test-option-1-label"
>
  Option 2
</label>
`;

exports[`InputCheckboxes > should display error message > expected html 1`] = `
<span
  class="inline-block max-w-prose border-l-2 border-red-600 bg-red-50 px-3 py-1"
  data-testid="input-error-test-id"
  id="input-checkboxes-test-error"
  role="alert"
>
  Test Error Message
</span>
`;

exports[`InputCheckboxes > should display helpMessagePrimary > expected html 1`] = `
<span
  class="block max-w-prose text-gray-500 mb-2"
  data-testid="input-field-help-primary"
  id="input-checkboxes-test-help-primary"
>
  Primary help message
</span>
`;

exports[`InputCheckboxes > should display helpMessageSecondary > expected html 1`] = `
<span
  class="block max-w-prose text-gray-500 mt-2"
  data-testid="input-field-help-secondary"
  id="input-checkboxes-test-help-secondary"
>
  Secondary help message
</span>
`;

exports[`InputCheckboxes > should render component with legend and options > expected html 1`] = `
<span>
  Test Legend
</span>
`;

exports[`InputCheckboxes > should render component with legend and options > expected html 2`] = `
<label
  class="block pl-3 leading-6"
  for="input-checkbox-test-option-0"
  id="input-checkbox-test-option-0-label"
>
  Option 1
</label>
`;

exports[`InputCheckboxes > should render component with legend and options > expected html 3`] = `
<label
  class="block pl-3 leading-6"
  for="input-checkbox-test-option-1"
  id="input-checkbox-test-option-1-label"
>
  Option 2
</label>
`;
